@@ -45,6 +45,15 @@ CXXFLAGS ?= "@CXXFLAGS@" ;
 LDFLAGS  ?= "@LDFLAGS@" ;
 LIBS     ?= "@LIBS@" ;
 
+# some warning flags for SunStudio
+if $(SUN_COMPILER) {
+	$(CCFLAGS)  += "+w2" ;
+	$(CXXFLAGS) += "+w2" ;
+}
+
+# standard C++ library we link with; for now is gcc's default, but user can override it from shell
+STDLIB   ?= -lstdc++ ;
+
 # for fltk and X11
 FLTK_CFLAGS    ?= "@FLTK_CFLAGS@" ;
 FLTK_CXXFLAGS  ?= "$(FLTK_CFLAGS)" ;
