@@ -45,9 +45,6 @@ RMDIR   = "rm -R" ;
 COPYDIR = "cp -R" ;
 LINKCMD = "ln -s" ;
 
-# standard C++ library we link with; for now is gcc's default, but user can override it from shell
-STDLIB ?= -lstdc++ ;
-
 # variables used by jam directly
 # OPTIM is cleared so it don't collide with FLAGS
 OPTIM     = ;
